--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -19,10 +19,11 @@
     "react-icons": "5.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "10.0.0-rc.1",
-    "@storybook/addon-links": "10.0.0-rc.1",
-    "@storybook/addon-themes": "10.0.0-rc.1",
-    "@storybook/react-vite": "10.0.0-rc.1",
+    "@storybook/addon-docs": "0.0.0-pr-32810-sha-26d8df63",
+    "@storybook/addon-links": "0.0.0-pr-32810-sha-26d8df63",
+    "@storybook/addon-mcp": "^0.1.0",
+    "@storybook/addon-themes": "0.0.0-pr-32810-sha-26d8df63",
+    "@storybook/react-vite": "0.0.0-pr-32810-sha-26d8df63",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.19.1",
@@ -31,10 +32,10 @@
     "autoprefixer": "10.4.20",
     "eslint-plugin-react": "7.37.3",
     "eslint-plugin-react-refresh": "0.4.16",
-    "eslint-plugin-storybook": "10.0.0-rc.1",
+    "eslint-plugin-storybook": "0.0.0-pr-32810-sha-26d8df63",
     "eslint-plugin-vitest": "0.5.4",
     "postcss": "8.4.49",
-    "storybook": "10.0.0-rc.1",
+    "storybook": "0.0.0-pr-32810-sha-26d8df63",
     "tailwindcss": "3.4.17",
     "typescript": "5.6.3",
     "vite": "6.0.7"
