--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -19,15 +19,9 @@
     "react-icons": "5.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "8.1.10",
-    "@storybook/addon-essentials": "8.1.10",
-    "@storybook/addon-interactions": "8.1.10",
-    "@storybook/addon-links": "8.1.10",
-    "@storybook/addon-themes": "8.1.10",
-    "@storybook/blocks": "8.1.10",
-    "@storybook/react": "8.1.10",
-    "@storybook/react-vite": "8.1.10",
-    "@storybook/test": "8.1.10",
+    "@storybook/addon-links": "0.0.0-pr-32882-sha-eb3381a0",
+    "@storybook/addon-themes": "0.0.0-pr-32882-sha-eb3381a0",
+    "@storybook/react-vite": "0.0.0-pr-32882-sha-eb3381a0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.19.1",
@@ -36,12 +30,13 @@
     "autoprefixer": "10.4.20",
     "eslint-plugin-react": "7.37.3",
     "eslint-plugin-react-refresh": "0.4.16",
-    "eslint-plugin-storybook": "0.11.1",
+    "eslint-plugin-storybook": "0.0.0-pr-32882-sha-eb3381a0",
     "eslint-plugin-vitest": "0.5.4",
     "postcss": "8.4.49",
-    "storybook": "8.1.10",
+    "storybook": "0.0.0-pr-32882-sha-eb3381a0",
     "tailwindcss": "3.4.17",
     "typescript": "5.6.3",
-    "vite": "6.0.7"
+    "vite": "6.0.7",
+    "@storybook/addon-docs": "0.0.0-pr-32882-sha-eb3381a0"
   }
 }
